===============
Stalker Changes
===============

0.2.17.3
========

* **New:** Added ``Shot.fps`` attribute to hold the fps information per shot.

0.2.17.2
========

* **Fix:** Fixed ``Version_Inputs`` table to correctly take care of
  ``DELETE``s on the ``Versions`` table. So now it is possible to delete a
  ``Version`` instance without first cleaning the ``Link`` instances that is
  related to that ``Version`` instance.

* **Update:** Changed the ``id`` attribute name from ``info_id`` to ``log_id``
  in ``AuthenticationLog`` class.

0.2.17.1
========

* **Fix:** Fixed alembic revision

0.2.17
======

* **New:** Added ``AuthenticationLog`` class to hold user login/logout info.
* **New:** Added ``stalker.testing`` module to simplify testing setup.

0.2.16.4
========

* **Fix:** Fixed alembic revision.

0.2.16.3
========

* **New:** ``ProjectUser`` now also holds a new field called ``rate``. The
  default value is equal to the ``ProjectUser.user.rate``. It is a way to hold
  the rate of a user on a specific project.

* **New:** Added the ``Invoice`` class.

* **New:** Added the ``Payment`` class.

* **New:** Added two simple mixins ``AmountMixin`` and ``UnitMixin``.

* **Update:** ``Good`` class is now mixed in with the new ``UnitMixin`` class.

* **Update:** ``BudgetEntry`` class is now mixed in with the new
  ``AmountMixin`` and ``UnitMixin`` classes.

0.2.16.2
========

* **New:** ``Group`` permissions can now be set on ``__init__()`` with the
  ``permissions`` argument.

0.2.16.1
========

* **Fix:** As usual after a new release that changes database schema, fixed the
  corresponding Alembic revision (92257ba439e1).

0.2.16
======

* **New:** ``Budget`` instances are now statusable.

* **Update:** Updated documentation to include database migration instructions
  with Alembic.

0.2.15.2
========

* **Fix:** Fixed a typo in the error message in
  ``User._validate_email_format()`` method.

* **Fix:** Fixed a query-invoked auto-flush problem in