@@ -1022,7 +1022,7 @@ class DatabaseTester(unittest.TestCase):
         sql_query = 'select version_num from "alembic_version"'
         version_num = \
             db.DBSession.connection().execute(sql_query).fetchone()[0]
-        self.assertEqual('a9319b19f7be', version_num)
+        self.assertEqual('0063f547dc2e', version_num)
 
     def test_initialization_of_alembic_version_table_multiple_times(self):
         """testing if the db.create_alembic_table() will handle initializing
@@ -1042,7 +1042,7 @@ class DatabaseTester(unittest.TestCase):
         sql_query = 'select version_num from "alembic_version"'
         version_num = \
             db.DBSession.connection().execute(sql_query).fetchone()[0]
-        self.assertEqual('a9319b19f7be', version_num)
+        self.assertEqual('0063f547dc2e', version_num)
 
         db.DBSession.remove()
         db.setup(db_config)
